src/objects/Discretionary_Approval_history__c/Discretionary_Approval_history__c.object-meta.xml
<CustomObject>
    <label>Discretionary  Approval History</label>
    <nameField>
        <displayFormat>a-{000}</displayFormat>
        <label>Discretionary  Approval history Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discretionary  Approval History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>