src/objects/Discretionary_Approval_history__c/fields/Backup_EmailId__c.field-meta.xml
<CustomField>
    <fullName>Backup_EmailId__c</fullName>
    <label>Backup Approver Email</label>
    <type>Email</type>
</CustomField>