src/objects/Discretionary_Approval_history__c/fields/Discretionary__c.field-meta.xml
<CustomField>
    <fullName>Discretionary__c</fullName>
    <label>Discretionary</label>
    <referenceTo>Discretionary__c</referenceTo>
    <relationshipLabel>Discretionary Approval Histories</relationshipLabel>
    <relationshipName>Discretionary_Approval_histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>