src/objects/Discretionary_Approval_history__c/fields/DiscretionaryApproverEmailFormulae__c.field-meta.xml
<CustomField>
    <fullName>DiscretionaryApproverEmailFormulae__c</fullName>
    <formula>Discretionary__r.Approver_EmailId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DiscretionaryApproverEmailFormulae</label>
    <type>Text</type>
</CustomField>