src/objects/Discretionary_Approval_history__c/fields/DiscretionaryBakupApproverEmailFormulae__c.field-meta.xml
<CustomField>
    <fullName>DiscretionaryBakupApproverEmailFormulae__c</fullName>
    <formula>Discretionary__r.Backup_EmailId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DiscretionaryBakupApproverEmailFormulae</label>
    <type>Text</type>
</CustomField>