src/objects/Discretionary_Approval_history__c/fields/Is_Discretionary_Closed__c.field-meta.xml
<CustomField>
    <fullName>Is_Discretionary_Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used for internal purpose. It will be checked if discretionary is approved or rejected</description>
    <label>Is Discretionary Closed</label>
    <type>Checkbox</type>
</CustomField>