src/objects/Discretionary_Approval_history__c/fields/SendApproval_Level1__c.field-meta.xml
<CustomField>
    <fullName>SendApproval_Level1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendApproval Level1</label>
    <type>Checkbox</type>
</CustomField>