src/objects/Discretionary_Approval_history__c/fields/SendApproval_Level2__c.field-meta.xml
<CustomField>
    <fullName>SendApproval_Level2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendApproval Level2</label>
    <type>Checkbox</type>
</CustomField>