src/objects/Discretionary_Approval_history__c/fields/SendApproval_Level3__c.field-meta.xml
<CustomField>
    <fullName>SendApproval_Level3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SendApproval Level3</label>
    <type>Checkbox</type>
</CustomField>