src/objects/Discretionary_Approval_history__c/listViews/Pending.listView-meta.xml
<ListView>
    <fullName>Pending</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Discretionary__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Reason_for_Approval_Rejection__c</columns>
    <columns>ApproverEmail__c</columns>
    <columns>Backup_EmailId__c</columns>
    <columns>SendApproval_Level1__c</columns>
    <columns>SendApproval_Level2__c</columns>
    <columns>SendApproval_Level3__c</columns>
    <columns>Is_Discretionary_Closed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>contains</operation>
        <value>Pending</value>
    </filters>
    <filters>
        <field>Is_Discretionary_Closed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Pending</label>
</ListView>