src/objects/Discretionary_Approval_history__c/listViews/Rejected.listView-meta.xml
<ListView>
    <fullName>Rejected</fullName>
    <columns>NAME</columns>
    <columns>Approval_Status__c</columns>
    <columns>Reason_for_Approval_Rejection__c</columns>
    <columns>Discretionary__c</columns>
    <columns>SendApproval_Level1__c</columns>
    <columns>SendApproval_Level2__c</columns>
    <columns>SendApproval_Level3__c</columns>
    <columns>Is_Discretionary_Closed__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Rejected</label>
</ListView>